compiler/test-data/parser/errors/theme/asset_with_init.frel
module test

theme AppTheme {
    primaryColor : asset Color = 0xFF0000
}
